@@ -4,6 +4,8 @@ that we distribute with the binaries. (see changelog)
 22/07/2006
 SPoG
 - Fixed doom3 func_static with model not appearing to move when dragged. 
+- Changed ASE model loader to parse material names the same way as DoomEdit.
+- Fixed title of wait-dialog when loading a model.
 
 09/07/2006
 Shaderman
